<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.MenuFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/FireOrangeBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minWidth="200dp"
        android:text="@string/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.button.MaterialButton
        style="@style/FireOrangeBtnStyle"
        android:id="@+id/btn_random"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_random"
        app:layout_constraintEnd_toEndOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="@+id/btn_search"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <com.google.android.material.button.MaterialButton
        style="@style/FireOrangeBtnStyle"
        android:id="@+id/btn_fav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_favourite"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_random"
        app:layout_constraintStart_toStartOf="@+id/btn_random"
        app:layout_constraintTop_toBottomOf="@+id/btn_random" />

</androidx.constraintlayout.widget.ConstraintLayout>