<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SearchFragment">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search_hint"
        android:minHeight="@dimen/min_text_size"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="@dimen/min_text_size"
        android:text="@string/btn_search"
        app:layout_constraintEnd_toEndOf="@+id/search_et"
        app:layout_constraintTop_toBottomOf="@+id/search_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_to_fav_btn"
        app:layout_constraintStart_toStartOf="@+id/search_et"
        app:layout_constraintTop_toBottomOf="@+id/search_et" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/pokemon_item"
        tools:itemCount="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>